# diffblocksmac

./: .gitignore  README.md  pyproject.toml
docs/: paper_notes.md
examples/: plot_comparison.py  train_gpt.py
src/dblocks/: __init__.py  _native.py  blocks.py  sampling.py  schedules.py
src/dblocks/_csrc/: Makefile  dblocks_native.c
src/dblocks/core/: __init__.py  blocks.py  sampling.py  schedules.py
src/dblocks/data/: __init__.py  text.py
src/dblocks/memory/: __init__.py  profiler.py
src/dblocks/models/: __init__.py  gpt.py
src/dblocks/nn/: __init__.py  attention.py  conditioning.py  feedforward.py  transformer.py
src/dblocks/training/: __init__.py  callbacks.py  loss.py  optimizer.py  trainer.py
tests/: test_schedules.py
